unpackaged/main/default/objects/Case/fields/IssueReported__c.field-meta.xml
<CustomField>
    <fullName>IssueReported__c</fullName>
    <description>Issues Reported via Performance Escalation Form</description>
    <label>Issue Reported</label>
    <type>TextArea</type>
</CustomField>