unpackaged/main/default/objects/Case/fields/ITAR_Box_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>ITAR_Box_Folder_URL__c</fullName>
    <formula>HYPERLINK("https://www.xometry.com/file-sharing/?folderId="+ BoxITARConsumerFolderId__c ,"Click here to upload files (secure for ITAR/EAR)")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITAR Box Folder URL</label>
    <type>Text</type>
</CustomField>