unpackaged/main/default/objects/Case/fields/ITARFlagonOppRecord__c.field-meta.xml
<CustomField>
    <fullName>ITARFlagonOppRecord__c</fullName>
    <description>ITAR Flag on Opportunity Record, Not Job Record</description>
    <formula>Opportunity__r.ITAR__c</formula>
    <inlineHelpText>ITAR Flag on Opportunity Record, Mainly Used by PSE.</inlineHelpText>
    <label>ITAR Flag on Opp Record</label>
    <type>Checkbox</type>
</CustomField>