unpackaged/main/default/objects/Case/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <label>Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>