unpackaged/main/default/objects/Case/fields/JobRiskFactor__c.field-meta.xml
<CustomField>
    <fullName>JobRiskFactor__c</fullName>
    <label>Job Risk Factor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>