unpackaged/main/default/objects/Case/fields/Last_Assignee_in_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignee_in_Zendesk__c</fullName>
    <inlineHelpText>The last person the Ticket was assigned to in Zendesk before sending it to Salesforce.</inlineHelpText>
    <label>Last Assignee in Zendesk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>