unpackaged/main/default/objects/Case/fields/Last_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Change_Date__c</fullName>
    <description>Date/Time of last case owner change</description>
    <inlineHelpText>Date/Time of last case owner change</inlineHelpText>
    <label>Last Owner Change Date</label>
    <type>DateTime</type>
</CustomField>