unpackaged/main/default/objects/Case/fields/LatestPSEOutcomeSetTime__c.field-meta.xml
<CustomField>
    <fullName>LatestPSEOutcomeSetTime__c</fullName>
    <description>Timestamp for latest PSE Outcome set time. This is filled in in the flow.</description>
    <label>Latest PSE Outcome Set Time</label>
    <type>DateTime</type>
</CustomField>