unpackaged/main/default/objects/Case/fields/LineItemCountLookup__c.field-meta.xml
<CustomField>
    <fullName>LineItemCountLookup__c</fullName>
    <formula>Opportunity__r.LineItemCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>