unpackaged/main/default/objects/Case/fields/LineItemCountOpsOrderLookup__c.field-meta.xml
<CustomField>
    <fullName>LineItemCountOpsOrderLookup__c</fullName>
    <description>Line Item Count on the Related Ops Order Record.</description>
    <formula>GNOOrder__r.LineItemCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Count On Ops Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>