unpackaged/main/default/objects/Case/fields/MadeInChina__c.field-meta.xml
<CustomField>
    <fullName>MadeInChina__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Made In China?</label>
    <type>Checkbox</type>
</CustomField>