unpackaged/main/default/objects/Case/fields/Major_Project__c.field-meta.xml
<CustomField>
    <fullName>Major_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field for managers to select if the case in question is of high importance and prioritization for Operations Leadership.</description>
    <inlineHelpText>A field for managers to select if the case in question is of high importance and prioritization for Operations Leadership.</inlineHelpText>
    <label>Major Project</label>
    <type>Checkbox</type>
</CustomField>