unpackaged/main/default/objects/Case/fields/Manual_Quote_Prioritization_Score__c.field-meta.xml
<CustomField>
    <fullName>Manual_Quote_Prioritization_Score__c</fullName>
    <formula>Opportunity__r.Manual_Quote_Prioritization_Score__c</formula>
    <label>MQ Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>