unpackaged/main/default/objects/Case/fields/Manual_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Manual_Quote_Status__c</fullName>
    <label>Manual Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Manual Quote</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>China MQ</fullName>
            </value>
            <value>
                <fullName>Quick Parts</fullName>
            </value>
            <value>
                <fullName>Sales Hold</fullName>
            </value>
            <value>
                <fullName>DFM Hold</fullName>
            </value>
            <value>
                <fullName>DFM to HORD</fullName>
            </value>
            <value>
                <fullName>MQ China Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>