unpackaged/main/default/objects/Case/fields/ManufacturingProcess__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingProcess__c</fullName>
    <description>Used by GNO Team.</description>
    <inlineHelpText>GNO Team Use</inlineHelpText>
    <label>Manufacturing Process (Not 4 Reporting)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>BJ3D</fullName>
            </value>
            <value>
                <fullName>Carbon DLS</fullName>
            </value>
            <value>
                <fullName>Casting</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>DMLS</fullName>
            </value>
            <value>
                <fullName>FDM</fullName>
            </value>
            <value>
                <fullName>HP Multi Jet Fusion</fullName>
            </value>
            <value>
                <fullName>Injection Molding</fullName>
            </value>
            <value>
                <fullName>PolyJet</fullName>
            </value>
            <value>
                <fullName>Sheet Metal</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>SLS</fullName>
            </value>
            <value>
                <fullName>Sheet Cutting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>