unpackaged/main/default/objects/Case/fields/ManufacturingProcessonOpsOrder__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingProcessonOpsOrder__c</fullName>
    <description>Manu. Process on Ops Order</description>
    <formula>GNOOrder__r.ManufacturingProcess__c</formula>
    <label>Manufacturing Process on Ops Order</label>
    <type>Text</type>
</CustomField>