unpackaged/main/default/objects/Case/fields/MarketplaceCaseExceptionFlag__c.field-meta.xml
<CustomField>
    <fullName>MarketplaceCaseExceptionFlag__c</fullName>
    <description>Marketplace Case Exception Flag</description>
    <formula>IF(OR(
AND( RecordType.Name ='Seller Marketplace', ISPICKVAL(Status,'New'),
FLOOR( MOD( (now() - CreatedDate) * 24, 24 ) ) &gt;2 ),
AND(Age_hrs__c &gt;72, ISBLANK(ClosedDate))
),true,false)</formula>
    <inlineHelpText>Case Open for 24 hours in New status or Not Solved in 72 Hours</inlineHelpText>
    <label>Marketplace Case Exception Flag</label>
    <type>Checkbox</type>
</CustomField>