unpackaged/main/default/objects/Case/fields/Materials_Description__c.field-meta.xml
<CustomField>
    <fullName>Materials_Description__c</fullName>
    <label>Materials Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>