unpackaged/main/default/objects/Case/fields/MKT_ClicktoCall_del__c.field-meta.xml
<CustomField>
    <fullName>MKT_ClicktoCall_del__c</fullName>
    <formula>HYPERLINK("tel:" &amp; SuppliedPhone, SuppliedPhone,"_self")</formula>
    <inlineHelpText>Web Phone Click to Call</inlineHelpText>
    <label>Click to Call Number</label>
    <type>Text</type>
</CustomField>