unpackaged/main/default/objects/Case/fields/MODCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>MODCaseNumber__c</fullName>
    <description>MOD Case Number</description>
    <formula>MOD(VALUE(CaseNumber),9)</formula>
    <inlineHelpText>Internal Case Num.</inlineHelpText>
    <label>MODCaseNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>