unpackaged/main/default/objects/Case/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <label>My Order: Technical Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>