unpackaged/main/default/objects/Case/fields/Next_SLA_End__c.field-meta.xml
<CustomField>
    <fullName>Next_SLA_End__c</fullName>
    <label>Next SLA End</label>
    <type>DateTime</type>
</CustomField>