unpackaged/main/default/objects/Case/fields/NON_ITAR_Box_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>NON_ITAR_Box_Folder_URL__c</fullName>
    <formula>HYPERLINK("https://www.xometry.com/file-sharing/?folderId="+ BoxNonITARConsumerFolderId__c ,"Click here to upload files that are not Export Controlled")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NON-ITAR Box Folder URL</label>
    <type>Text</type>
</CustomField>