unpackaged/main/default/objects/Case/fields/NoTakeRisk__c.field-meta.xml
<CustomField>
    <fullName>NoTakeRisk__c</fullName>
    <label>No Take Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>rocket</fullName>
                <label>💩 🚀</label>
            </value>
            <value>
                <fullName>fire</fullName>
                <label>🔥</label>
            </value>
            <value>
                <fullName>mushroom</fullName>
                <label>🥦</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>lol</fullName>
                <label>🤣</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>