unpackaged/main/default/objects/Case/fields/NYOP_TargetLeadTime__c.field-meta.xml
<CustomField>
    <fullName>NYOP_TargetLeadTime__c</fullName>
    <label>Target Lead Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>