unpackaged/main/default/objects/Case/fields/NYOP_TargetPrice__c.field-meta.xml
<CustomField>
    <fullName>NYOP_TargetPrice__c</fullName>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>