unpackaged/main/default/objects/Case/fields/NYOP_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>NYOP_Timestamp__c</fullName>
    <label>NYOP Timestamp</label>
    <type>DateTime</type>
</CustomField>