unpackaged/main/default/objects/Case/fields/ObjectsAssociated__c.field-meta.xml
<CustomField>
    <fullName>ObjectsAssociated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Objects Associated?</label>
    <type>Checkbox</type>
</CustomField>