unpackaged/main/default/objects/Case/fields/Oldest_Inbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Inbound_Message__c</fullName>
    <label>Oldest Inbound Message</label>
    <type>DateTime</type>
</CustomField>