unpackaged/main/default/objects/Case/fields/Oldest_Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Outbound_Message__c</fullName>
    <label>Oldest Outbound Message</label>
    <type>DateTime</type>
</CustomField>