unpackaged/main/default/objects/Case/fields/Onboarding_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Next_Steps__c</fullName>
    <label>Onboarding Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Test Part</fullName>
            </value>
            <value>
                <fullName>No Next Steps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>