unpackaged/main/default/objects/Case/fields/OnboardingStatus__c.field-meta.xml
<CustomField>
    <fullName>OnboardingStatus__c</fullName>
    <description>Temporary field for setting a Case's Onboarding Status</description>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Review Information</fullName>
            </value>
            <value>
                <fullName>Test Part In Progress</fullName>
            </value>
            <value>
                <fullName>Test Part In Review</fullName>
            </value>
            <value>
                <fullName>Onboarding call</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Failed Test Part</fullName>
            </value>
            <value>
                <fullName>Test Part Preparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>