unpackaged/main/default/objects/Case/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <formula>Opportunity__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The owner of the associated Opportunity</inlineHelpText>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>