unpackaged/main/default/objects/Case/fields/OpportunityOwnerID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerID__c</fullName>
    <description>Opportunity Owner Salesforce ID</description>
    <formula>CASESAFEID(Opportunity__r.OwnerId)</formula>
    <inlineHelpText>Opportunity Owner Salesforce ID</inlineHelpText>
    <label>Opportunity Owner ID</label>
    <type>Text</type>
</CustomField>