unpackaged/main/default/objects/Case/fields/OppOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OppOwnerEmail__c</fullName>
    <description>Opp Owner Email - Used in Email Template</description>
    <formula>Opportunity__r.Owner.Email</formula>
    <label>OppOwnerEmail</label>
    <type>Text</type>
</CustomField>