unpackaged/main/default/objects/Case/fields/OppOwnersPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OppOwnersPhoneNumber__c</fullName>
    <description>For Email Template</description>
    <formula>Opportunity__r.Owner.Phone</formula>
    <label>Opp Owner's Phone Number</label>
    <type>Text</type>
</CustomField>