unpackaged/main/default/objects/Case/fields/Ops_Order_ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order_ERP_Status__c</fullName>
    <formula>GNOOrder__r.ERPStatus__c</formula>
    <label>Ops Order ERP Status</label>
    <type>Text</type>
</CustomField>