unpackaged/main/default/objects/Case/fields/OPS_Top_20_Customer__c.field-meta.xml
<CustomField>
    <fullName>OPS_Top_20_Customer__c</fullName>
    <description>[OPS] Top 20 Customer?</description>
    <formula>Account.OPS_Top_20_Customer__c</formula>
    <inlineHelpText>Lookup to Account</inlineHelpText>
    <label>[OPS] Top 20 Customer?</label>
    <type>Checkbox</type>
</CustomField>