unpackaged/main/default/objects/Case/fields/OpsOrderTotal__c.field-meta.xml
<CustomField>
    <fullName>OpsOrderTotal__c</fullName>
    <description>Ops Order Total.</description>
    <formula>GNOOrder__r.OrderTotal__c</formula>
    <label>Ops Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>