unpackaged/main/default/objects/Case/fields/OR_Tag__c.field-meta.xml
<CustomField>
    <fullName>OR_Tag__c</fullName>
    <description>Adding architecture to handle some Outreach sequence processes on the related Contact</description>
    <label>OR Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>