unpackaged/main/default/objects/Case/fields/OR_Tag_Date__c.field-meta.xml
<CustomField>
    <fullName>OR_Tag_Date__c</fullName>
    <description>Establishing architecture to handle some specific use cases involving Outreach sequences on related Contacts</description>
    <label>OR Tag Date</label>
    <type>Date</type>
</CustomField>