unpackaged/main/default/objects/Case/fields/Order_Revision_Details__c.field-meta.xml
<CustomField>
    <fullName>Order_Revision_Details__c</fullName>
    <label>Order Revision Details</label>
    <type>TextArea</type>
</CustomField>