unpackaged/main/default/objects/Case/fields/OrderDetails__c.field-meta.xml
<CustomField>
    <fullName>OrderDetails__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/orders/"&amp;OrderID__c, "Order Details")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Details</label>
    <type>Text</type>
</CustomField>