unpackaged/main/default/objects/Case/fields/OrderDueDateonOpsOrder__c.field-meta.xml
<CustomField>
    <fullName>OrderDueDateonOpsOrder__c</fullName>
    <description>Order Due Date on Ops Order</description>
    <formula>GNOOrder__r.OrderDueDate__c</formula>
    <label>Order Due Date on Ops Order</label>
    <type>Date</type>
</CustomField>