unpackaged/main/default/objects/Case/fields/Ordered_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Part_ID__c</fullName>
    <label>Ordered Part ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>