unpackaged/main/default/objects/Case/fields/OrderedDate__c.field-meta.xml
<CustomField>
    <fullName>OrderedDate__c</fullName>
    <label>Ordered Date</label>
    <type>Date</type>
</CustomField>