unpackaged/main/default/objects/Case/fields/OrderedPartID__c.field-meta.xml
<CustomField>
    <fullName>OrderedPartID__c</fullName>
    <externalId>true</externalId>
    <label>Ordered Part ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>