unpackaged/main/default/objects/Case/fields/Original_Case__c.field-meta.xml
<CustomField>
    <fullName>Original_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created During PSE Service Migration Project</description>
    <inlineHelpText>The original case that this case was split from. This is populated automatically when a case is split using the "Split Case" action.</inlineHelpText>
    <label>Original Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Split Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>