unpackaged/main/default/objects/Case/fields/OriginalOrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderDueDate__c</fullName>
    <label>Original Order Due Date</label>
    <type>Date</type>
</CustomField>