unpackaged/main/default/objects/Case/fields/Outbound_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Record_Type_Name__c</fullName>
    <description>Display the Record Types Developer Name for Workato References</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an API powered field</inlineHelpText>
    <label>Outbound Record Type Name</label>
    <type>Text</type>
</CustomField>