unpackaged/main/default/objects/Case/fields/OutcomeSalesUse__c.field-meta.xml
<CustomField>
    <fullName>OutcomeSalesUse__c</fullName>
    <label>Outcome - Sales Rep use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information Provided to PSE/SO/else</fullName>
            </value>
            <value>
                <fullName>Quote Delivered</fullName>
            </value>
            <value>
                <fullName>No Customer Response</fullName>
            </value>
            <value>
                <fullName>Information Sent To The Customer</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Did Not Quote</fullName>
                <isActive>false</isActive>
                <label>Did Not Quote</label>
            </value>
            <value>
                <fullName>Manual Quote Delivered</fullName>
                <isActive>false</isActive>
                <label>Manual Quote Delivered</label>
            </value>
            <value>
                <fullName>No Bid: Partial No Bid</fullName>
                <isActive>false</isActive>
                <label>No Bid: Partial No Bid</label>
            </value>
            <value>
                <fullName>No Bid: Total No Bid</fullName>
                <isActive>false</isActive>
                <label>No Bid: Total No Bid</label>
            </value>
            <value>
                <fullName>Quote Configured for AQ</fullName>
                <isActive>false</isActive>
                <label>Quote Configured for AQ</label>
            </value>
            <value>
                <fullName>Quote Configured for MQ</fullName>
                <isActive>false</isActive>
                <label>Quote Configured for MQ</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <isActive>false</isActive>
                <label>Refund</label>
            </value>
            <value>
                <fullName>Remake</fullName>
                <isActive>false</isActive>
                <label>Remake</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>