unpackaged/main/default/objects/Case/fields/OutsourcePartnerGroup__c.field-meta.xml
<CustomField>
    <fullName>OutsourcePartnerGroup__c</fullName>
    <label>Outsource Partner Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHINA GROUP</fullName>
            </value>
            <value>
                <fullName>DEFAULT GROUP</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>PREMIUM GROUP</fullName>
            </value>
            <value>
                <fullName>ULTRA PREMIUM GROUP</fullName>
            </value>
            <value>
                <fullName>Mexico and Canada Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>