unpackaged/main/default/objects/Case/fields/Owner_is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Inactive__c</fullName>
    <description>inactive or (active but frozen)</description>
    <formula>Owner:User.IsActive = False||(Owner:User.IsFrozen__c = True &amp;&amp; Owner:User.IsActive = True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>inactive or (active but frozen)</inlineHelpText>
    <label>Owner is Inactive or Frozen</label>
    <type>Checkbox</type>
</CustomField>