unpackaged/main/default/objects/Case/fields/Owners_Role__c.field-meta.xml
<CustomField>
    <fullName>Owners_Role__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <formula>Owner:User.UserRole.Name</formula>
    <inlineHelpText>The name of the case owner's role.</inlineHelpText>
    <label>Owner's Role</label>
    <type>Text</type>
</CustomField>