unpackaged/main/default/objects/Case/fields/P21AccountDetails__c.field-meta.xml
<CustomField>
    <fullName>P21AccountDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P21 Account Details</label>
    <referenceTo>P21_Account_Details__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>