unpackaged/main/default/objects/Case/fields/ParentCaseStatus__c.field-meta.xml
<CustomField>
    <fullName>ParentCaseStatus__c</fullName>
    <description>Parent Case's Status</description>
    <formula>Text( Parent.Status )</formula>
    <inlineHelpText>Parent Case's Status</inlineHelpText>
    <label>Parent Case Status</label>
    <type>Text</type>
</CustomField>