unpackaged/main/default/objects/Case/fields/ParentOpsOrder__c.field-meta.xml
<CustomField>
    <fullName>ParentOpsOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Cases (Parent Ops Order)</relationshipLabel>
    <relationshipName>DummyOrder</relationshipName>
    <type>Lookup</type>
</CustomField>