unpackaged/main/default/objects/Case/fields/Part_IDs_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_IDs_Description__c</fullName>
    <label>Part IDs/Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>