unpackaged/main/default/objects/Case/fields/Part_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Part_Rejection_Comments__c</fullName>
    <label>Part Rejection Comments</label>
    <type>TextArea</type>
</CustomField>