unpackaged/main/default/objects/Case/fields/Part_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Part_Rejection_Reason__c</fullName>
    <label>Part Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Threads</fullName>
            </value>
            <value>
                <fullName>Dimensional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>