unpackaged/main/default/objects/Case/fields/PartAccepted__c.field-meta.xml
<CustomField>
    <fullName>PartAccepted__c</fullName>
    <formula>IF(ISBLANK(AcceptedJobID__c),FALSE,TRUE)</formula>
    <label>Part Accepted?</label>
    <type>Checkbox</type>
</CustomField>