unpackaged/main/default/objects/Case/fields/Partner_Machines_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Partner_Machines_Certifications__c</fullName>
    <label>Partner: Machines/Certifications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>My certificate is about to expire.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>