unpackaged/main/default/objects/Case/fields/Partner_Payouts__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payouts__c</fullName>
    <label>Partner: Payouts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>When will I get paid for a job?</fullName>
            </value>
            <value>
                <fullName>How do I sign up for Stripe?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>