unpackaged/main/default/objects/Case/fields/Partner_Technical_Detail__c.field-meta.xml
<CustomField>
    <fullName>Partner_Technical_Detail__c</fullName>
    <label>Partner: Technical Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>my_certificate_is_about_to_expire.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>