unpackaged/main/default/objects/Case/fields/Partner_Xometry_Advance_Card__c.field-meta.xml
<CustomField>
    <fullName>Partner_Xometry_Advance_Card__c</fullName>
    <label>Partner: Xometry Advance Card</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>How do I cancel the card?</fullName>
            </value>
            <value>
                <fullName>Is this a credit card?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>