unpackaged/main/default/objects/Case/fields/PartnerUpdateLate__c.field-meta.xml
<CustomField>
    <fullName>PartnerUpdateLate__c</fullName>
    <description>Temp Indicator for Partner Update Late</description>
    <formula>AND(ISPICKVAL(Type,'Partner Update'),  CONTAINS(Subject,'- Late -'))</formula>
    <inlineHelpText>Temp</inlineHelpText>
    <label>Partner Update - Late</label>
    <type>Checkbox</type>
</CustomField>