unpackaged/main/default/objects/Case/fields/Parts_Failed_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Parts_Failed_Inspection__c</fullName>
    <label>Parts Failed Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>